# FPL_Scout

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  modal_app.py  pyproject.toml  tatus --short
.github/workflows/: backend-ci-cd.yml
app/ui/: pipeline_runner.py  report_loader.py  streamlit_app.py  team_of_week.py
docs/: modal-deployment.md
frontend/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Header.tsx  Icons.tsx  PageShell.tsx  RecommendationEvidence.tsx  ReportViewer.tsx  Sidebar.tsx  SuggestedTeamBench.tsx  SuggestedTeamPitch.tsx  SuggestedTeamTable.tsx  apiError.ts  suggestedTeam.ts  useLatestReport.ts  useSelectedReport.tsx
frontend/lib/: api.ts
frontend/test/: admin-pipeline.test.mjs  empty-report-index.test.mjs  frontend-parity.test.mjs  report-selection.test.mjs  suggested-team.test.mjs
migrations/: env.py
migrations/versions/: 20260721_01_add_transcripts.py
notebooks/: FPL_API_Experimentations.ipynb  experimentations.ipynb
scripts/: backfill_report_seasons.py  modal_smoke_test.sh
src/adapters/: __init__.py  fpl.py  storage.py  youtube.py
src/agents/: expert_video_agent.py  final_synthesis_agent.py  model_factory.py
src/app/: main.py
src/schemas/: aggregate_report.py  expert_analysis.py  final_report.py  report_identity.py  video_job.py
src/scripts/: __init__.py  import_transcripts.py
src/services/: aggregation_service.py  consensus.py  pipeline_service.py  (+7 more)
tests/: test_backfill_report_seasons.py
(+90 files in other folders)
