[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-agent"
version = "0.1.0"
description = "Automated weekly Fantasy Premier League reporting from YouTube expert analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "python-docx>=1.1.2",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "imports>=0.1.4",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "openai-agents>=0.13.4",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
    "streamlit>=1.45.1",
    "uvicorn>=0.42.0",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.17",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "src*"]

[tool.ruff]
extend-exclude = ["notebooks"]
